--- a/webpack基本使用/package.json
+++ b/webpack基本使用/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^3.0.0",
+    "css-loader": "^2.0.2",
+    "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^3.6.0"
   }
